--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "picedit",
   "version": "0.1.0",
   "homepage": ".",
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
